# storage-controller

./: .gitignore  .gitleaks.toml  README.md  esphome_controller.yaml  repository.yaml
storage-controller/: CHANGELOG.md  DOCS.md  Dockerfile  INSTALL.md  README.md  alembic.ini  apparmor.txt  build.yaml  config.yaml  pyproject.toml  run.sh
storage-controller/backend/app/: __init__.py  backup.py  cli.py  collector.py  config.py  db.py  defrost_learning.py  delivery.py  (+24 more)
storage-controller/docs/: backup-restore.md  current-status.md
storage-controller/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
storage-controller/migrations/: env.py
storage-controller/tests/: conftest.py  fake_smtp.py  test_backup.py  test_collector.py  test_dashboard.py  test_defrost.py  test_defrost_learning.py  test_diagnostics.py  test_diagnostics_buffer.py  test_email_templates.py  test_email_transport.py  test_entities.py  test_ha_client.py  test_health_status.py  test_history_api.py  test_history_import.py  test_incident_engine.py  test_incident_logic.py  test_incidents_api.py  test_ingress.py  test_manager_reconnect.py  test_normalization.py  test_phase45.py  test_phase6_api.py  test_phase6_integration.py  test_profiles_seed.py  test_report_charts.py  test_report_incident_states.py  test_report_pagination_scale.py  test_report_timestamps.py  test_reports.py  test_scheduling_math.py  test_security_logging.py  test_state_series.py  test_status_logic.py  test_storage_units.py
storage-controller/translations/: de.yaml  en.yaml
(+219 files in other folders)
